--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mkulimakonekt",
   "private": true,
   "version": "0.0.0",
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "web3": "^1.10.0"
   },
   "devDependencies": {
